<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditStudents" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/student_name"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:background="@drawable/edittext_default_bg"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#bbb" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/university_name"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_university_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:hint="@string/ex_hormuud_university"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#bbb" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/subject_studying_at_univeristy"
            android:textColor="#fff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:hint="@string/ex_computer_engineering"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#bbb" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/how_many_years_study"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_years"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_default_bg"
            android:paddingLeft="10dp"
            android:spinnerMode="dialog" />
    </LinearLayout>

</ScrollView>